--- a/nui/style.css
+++ b/nui/style.css
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Bahianita|Do+Hyeon|Khand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&family=Ewert&family=Great+Vibes&family=MedievalSharp&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&display=swap');
+
+
 @font-face {
-    font-family: cursive;
-    src: url(https://cdn.discordapp.com/attachments/644631964774694942/738180868748607649/GOTHAM-MEDIUM.OTF);
+    font-family: Bahianita;
+    src: url(https://fonts.gstatic.com/s/bahianita/v18/yYLr0hTb3vuqqsBUgxWdzTHU6NI.woff2) format('woff2');
 }
 
 @font-face {
@@ -15,11 +17,73 @@ body {
     margin-top: 80px;
 }
 
+.active.m-1 {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+.p-2{    
+    padding: 0px !important;
+    border-style: hidden !important;
+}
+* {
+    background-color: rgba(0, 0, 0, 0) !important;
+    border-color: rgba(0, 0, 0, 0) !important;
+}
+input {
+    border-bottom: 2px solid #000 !important;
+    font-size: 20px !important; 
+    font-family: 'Beau Rivage', cursive;
+    color: #000 !important;
+    letter-spacing: 0.25em !important;
+    font-weight: 900 !important;
+
+}
+.tab-pane{
+    padding: 25px !important;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+}
+button {
+    border-bottom: 2px solid #000 !important;
+    font-size: 20px !important; 
+    font-family: 'Beau Rivage', cursive;
+    color: #000 !important;
+    letter-spacing: 0.25em !important;
+    font-weight: 900 !important;
+}
+.card-text{
+    font-family: 'Great Vibes', cursive !important;
+    color: #000 !important;
+    font-size: 20px !important;
+    letter-spacing: 0.25em !important;
+    font-weight: 900 !important;
+    font-style: normal !important;
+}
+
+.card-title{
+    font-family: 'Great Vibes', cursive !important;
+    text-shadow: 2px;
+    font-size: 20px !important;
+    letter-spacing: 0.15em !important;
+
+    font-weight: 900 !important;
+    font-style: normal !important;
+}
+
 #bankingContainer {
-    background: #F9F6EE !important;
-    border-radius: 20px;
-    min-height: 800px;
-    max-height: 800px;
+    padding-top: 55px;
+    padding-left: 125px;
+    padding-right: 125px;
+    padding-bottom: 75px;
+    background-size: cover;
+    background-size: 100% 100% !important;
+    width: 1100px !important;
+    height: 1000px !important;
+    font-family: 'Beau Rivage', cursive;
+    font-weight: 900;
+
+    background-image: url(./images/bkg.png);
+    letter-spacing: 0.25em;
     display: none;
 }
 
@@ -34,5 +98,13 @@ body {
 .title {
     color: rgb(0, 0, 0);
     border-left: 2px solid rgb(0, 0, 0);
-    font-family: cursive;
+    font-family: 'Ewert', cursive;
+    
+}
+.col-3 {
+    padding:0px !important;
+}
+.mb-3{
+    margin: 0px !important;
+    padding: 0px !important;
 }
